name:                lunch-advisor
version:             0.1.0.0
cabal-version:       >=1.8
category:            Web
copyright:           © 2013 Nathan Arnold
license:             OtherLicense
license-file:        COPYING
author:              Nathan Arnold <natearn@natearn.info>
maintainer:          Nathan Arnold <natearn@natearn.info>
stability:           experimental
synopsis:            lunch recommender
homepage:            github.com/natearn/website
build-type:          Simple
description:
  Makes fantastic lunch recommendations

executable lunch-advisor
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Routes,
    MustacheTemplates,
    Application
  build-depends:
    base ==4.*,
    http-types,
    wai,
    wai-util ==0.4.*,
    wai-dispatch,
    wai-extra,
    wai-middleware-static,
    postgresql-simple,
    yesod-routes,
    warp,
    text,
    path-pieces,
    text-format

source-repository head
  type: git
  location: git://github.com/natearn/lunch-advisor.git
